Trae toda la data requerida pero no puedo mostrarla en el documento

--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
               <!--INFO PROD-->
               <div class="info-prod">
                 <h3></h3>
-                <p class="estado"></p>
-                <p class="vendidos"></p>
+                <p class="condition"></p>
+                <p class="soldQuantity"></p>
               </div>
               <!--CLOSE INFO PROD-->
 
